bpo-32777: subprocess: Fix usage of _Py_set_inheritable() in child_exec()

_Py_set_inheritable() raises a Python-level exception on error and
thus is not async-signal-safe, but child_exec() must use only
async-signal-safe functions because it's executed between fork() and
exec().

Fix this by introducing a non-raising version of _Py_set_inheritable()
and using it throughout child_exec().